plugins {
	id 'fabric-loom' version '0.6-SNAPSHOT'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	mavenCentral()
	maven { url = "https://maven.terraformersmc.com/" }
	maven { url = 'https://jitpack.io' }
}

dependencies {
	//mc
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	//includes
	include "com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"
	include "com.github.ZeroMemes:Alpine:${project.alpine_version}"
	include "org.yaml:snakeyaml:${project.snakeyaml_version}"
	include "org.reflections:reflections:${project.reflections_version}"
	include "net.jodah:typetools:${project.typetools_version}"
	include "org.javassist:javassist:${project.javassist_version}"

	//implementations
	implementation "com.github.Vatuu:discord-rpc:${project.discord_rpc_version}"
	implementation "com.github.ZeroMemes:Alpine:${project.alpine_version}"
	implementation "org.yaml:snakeyaml:${project.snakeyaml_version}"
	implementation "org.reflections:reflections:${project.reflections_version}"
	implementation "net.jodah:typetools:${project.typetools_version}"
	implementation "org.javassist:javassist:${project.javassist_version}"

	//runtime
	modRuntime "com.terraformersmc:modmenu:${project.mod_menu_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {

	it.options.encoding = "UTF-8"

	def targetVersion = 8
	if (JavaVersion.current().isJava9Compatible()) {
		it.options.release = targetVersion
	}
}


java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}
